hphp/hack/test/typecheck/case_sensitive_inheritance4.php.exp
File "case_sensitive_inheritance4.php", line 7, characters 26-28:
B inherits a method named `foo` whose name differs from this one (`FOO`) only by case. (Typing[4393])
  File "case_sensitive_inheritance4.php", line 3, characters 26-28:
  It was inherited from A as `~~foo~~`. If you meant to override it, please use the same casing as the inherited method. Otherwise, please choose a different name for the new method
