hphp/hack/test/typecheck/case_sensitive_inheritance4.php
<?hh // strict
class A {
  public static function foo(): void {}
}

class B extends A {
  public static function FOO(): void {}
}
